# RSS_db

./: .gitignore  README.md  app.py  main.py  pyproject.toml  query.py  subscriptions.db  utils.py
src/rss_manager/: __init__.py
templates/: add_feed.html  articles_list.html  feeds_list.css  feeds_list.html  index.html  readme.html
typings/feedparser/: __init__.pyi  api.pyi  encodings.pyi  exceptions.pyi  html.pyi  http.pyi  mixin.pyi  sanitizer.pyi  sgml.pyi  urls.pyi  util.pyi
typings/feedparser/datetimes/: __init__.pyi
typings/feedparser/namespaces/: _base.pyi  cc.pyi  dc.pyi  georss.pyi  itunes.pyi  psc.pyi
typings/feedparser/parsers/: loose.pyi  strict.pyi
