[project]
name = "RSS_Manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "geoqiao", email = "realvincentqiao@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.110.1",
    "uvicorn[standard]>=0.29.0",
    "feedparser>=6.0.11",
    "sqlalchemy>=2.0.29",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
