[project]
name = "rss-manager"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "geoqiao", email = "realvincentqiao@gmail.com" }
]
dependencies = [
    "fastapi[all]>=0.110.1",
    "uvicorn[standard]>=0.29.0",
    "feedparser>=6.0.11",
    "sqlalchemy>=2.0.29",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
